--- a/notritionVendorsAPP/View/Base.lproj/LaunchScreen.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PAR-iF-ZMN">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,23 +13,52 @@
         <!--View Controller-->
         <scene sceneID="xBE-ku-60C">
             <objects>
-                <viewController id="PAR-iF-ZMN" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="splashContrller" id="PAR-iF-ZMN" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MBH-kn-3Ig">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h3V-zJ-Gdn">
-                                <rect key="frame" x="75" y="77" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="GbM-xw-Ghy">
+                                <rect key="frame" x="62.5" y="193.5" width="250" height="280"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="h3V-zJ-Gdn">
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="250" id="1Mg-c8-3ZN"/>
+                                            <constraint firstAttribute="width" constant="250" id="2Xv-uO-89b"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Easy way to buy food!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEE-G2-A6c">
+                                        <rect key="frame" x="0.0" y="250" width="250" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="i0C-Nh-JOg"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                        <color key="textColor" red="0.11372549019607843" green="0.47843137254901957" blue="0.54509803921568623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="MEE-G2-A6c" firstAttribute="leading" secondItem="GbM-xw-Ghy" secondAttribute="leading" id="9UW-mX-Uqk"/>
+                                    <constraint firstAttribute="bottom" secondItem="MEE-G2-A6c" secondAttribute="bottom" id="ZWE-bb-P9B"/>
+                                    <constraint firstAttribute="trailing" secondItem="MEE-G2-A6c" secondAttribute="trailing" id="xRa-Ck-Cuw"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="GbM-xw-Ghy" firstAttribute="centerY" secondItem="MBH-kn-3Ig" secondAttribute="centerY" id="C6P-Wx-TvF"/>
+                            <constraint firstItem="GbM-xw-Ghy" firstAttribute="centerX" secondItem="MBH-kn-3Ig" secondAttribute="centerX" id="cP8-no-cCr"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="PbZ-pg-S2k"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gdE-xb-G9B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-174" y="215"/>
+            <point key="canvasLocation" x="74" y="242"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="320" height="320"/>
+    </resources>
 </document>
