--- a/notritionVendorsAPP/Controller/hightRating/view/AddNewCommentCell.xib
+++ b/notritionVendorsAPP/Controller/hightRating/view/AddNewCommentCell.xib
@@ -20,7 +20,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fbx-QL-Gx0" customClass="CosmosView" customModule="Cosmos">
-                        <rect key="frame" x="0.0" y="15" width="311" height="20"/>
+                        <rect key="frame" x="10" y="15" width="301" height="20"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="Tp0-6A-oDw"/>
@@ -42,7 +42,7 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RZl-71-hLP">
-                        <rect key="frame" x="0.0" y="45" width="311" height="30"/>
+                        <rect key="frame" x="10" y="45" width="301" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="1kR-0j-5RU"/>
                         </constraints>
@@ -50,13 +50,17 @@
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="dj fdjbvd df dbf hjdbv. hjdbvh bfvbhdjfbv fhjbv dh. ffhv bdfh bfhjbvmb dfbv hfvbdf vf bv fbvfhd vb" translatesAutoresizingMaskIntoConstraints="NO" id="1Wc-La-k9e">
-                        <rect key="frame" x="0.0" y="85" width="311" height="118.5"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="Enter content" translatesAutoresizingMaskIntoConstraints="NO" id="1Wc-La-k9e">
+                        <rect key="frame" x="10" y="85" width="301" height="118.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="zEL-v0-Bua"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="1Wc-La-k9e" firstAttribute="trailing" secondItem="Fbx-QL-Gx0" secondAttribute="trailing" id="2Mi-lA-lU1"/>
                     <constraint firstAttribute="trailing" secondItem="Fbx-QL-Gx0" secondAttribute="trailing" id="2d5-dk-VRf"/>
@@ -65,9 +69,9 @@
                     <constraint firstItem="RZl-71-hLP" firstAttribute="trailing" secondItem="Fbx-QL-Gx0" secondAttribute="trailing" id="SQd-eW-xnr"/>
                     <constraint firstItem="Fbx-QL-Gx0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="Wr1-xA-AOs"/>
                     <constraint firstItem="RZl-71-hLP" firstAttribute="leading" secondItem="Fbx-QL-Gx0" secondAttribute="leading" id="gsL-iF-qmJ"/>
-                    <constraint firstItem="Fbx-QL-Gx0" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="h3E-CS-t8o"/>
+                    <constraint firstItem="Fbx-QL-Gx0" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" constant="-10" id="h3E-CS-t8o"/>
                     <constraint firstItem="RZl-71-hLP" firstAttribute="top" secondItem="Fbx-QL-Gx0" secondAttribute="bottom" constant="10" id="kHu-t8-Toa"/>
-                    <constraint firstItem="Fbx-QL-Gx0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="s40-ea-2iU"/>
+                    <constraint firstItem="Fbx-QL-Gx0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="s40-ea-2iU"/>
                     <constraint firstItem="1Wc-La-k9e" firstAttribute="top" secondItem="RZl-71-hLP" secondAttribute="bottom" constant="10" id="s7U-0F-Dxm"/>
                     <constraint firstItem="1Wc-La-k9e" firstAttribute="width" secondItem="Fbx-QL-Gx0" secondAttribute="width" id="uaq-Ok-zkH"/>
                     <constraint firstItem="1Wc-La-k9e" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottom" constant="10" id="xD3-21-pqJ"/>
@@ -79,7 +83,7 @@
                 <outlet property="rating" destination="Fbx-QL-Gx0" id="SJp-ee-zFZ"/>
                 <outlet property="title" destination="RZl-71-hLP" id="OHC-GP-7Lg"/>
             </connections>
-            <point key="canvasLocation" x="125.59999999999999" y="222.1889055472264"/>
+            <point key="canvasLocation" x="295" y="213"/>
         </tableViewCell>
     </objects>
 </document>
