--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -433,7 +433,9 @@
         <scene sceneID="W7y-GX-8kg">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QZb-0J-Nu3" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Hight Rating" image="list(2)" id="llS-EI-XeO"/>
+                    <tabBarItem key="tabBarItem" title="Hight Rating" image="list(2)" id="llS-EI-XeO">
+                        <color key="badgeColor" red="0.1137254902" green="0.47843137250000001" blue="0.5450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="aKd-ea-nWe">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
